test/typeerrors/Heuristics/UnifierGuards2.hs
test = case "a" of
         _ | True  -> "hello"
         _ | False -> 13
